--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.8",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-text-transition": "^3.1.0",
     "tailwindcss": "3.3.2"
   }
 }
